--- a/smssync/src/main/res/menu/log_menu.xml
+++ b/smssync/src/main/res/menu/log_menu.xml
@@ -25,6 +25,12 @@
         android:title="@string/share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="ifRoom" />
+    <item
+            android:id="@+id/forcSync"
+            android:icon="@drawable/refresh"
+            android:orderInCategory="3"
+            android:title="Force Sync"
+            app:showAsAction="never" />
 
     <item
         android:id="@+id/delete_log_menu"
